--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
       "Controllers/",
       "Models/",
       "Services/",
-      "Exceptions/"
+      "Exceptions/",
+      "Configurations/"
     ]
   }
 }
