Remove unused class

--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "classmap" : [
       "Controllers/",
       "Models/",
-      "Services/",
-      "Configurations/"
+      "Services/"
     ]
   },
   "require": {
